--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "redux-persist": "^6.0.0"
+    "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
